# rcn-web

./: .gitignore  AGENTS.md  SCHEDULED_EVENTS.md  agents.md  check_cache.py  check_ids_2.py  check_mcp_routes.py  check_scope.py  inspect_metadata.py  mcp_server.py  mcp_server_dynamic.py  mcp_server_new.py  pyproject.toml  pytest.ini  rcn_agent.md  rcn_automation_data.db  rcn_exports.py  repro.py  requirements.txt  reset_metadata.py  server.py  server_actions_example.py  test_debug_scanning_mvp.py  test_filter.py  test_mcp.py  test_mcp_local.py  test_multistorage_logic.py  test_runner.py  test_web_match_storage.py
.gemini/skills/: rcn-debug-map  rcn-target-ops
.sisyphus/: boulder.json
.sisyphus/plans/: events-target-tests.md  js-viewer-flow-id.md  test-rcn-web-interact.md
assets/skills/: rcn-web.md
conductor/: product-guidelines.md  product.md  tech-stack.md  workflow.md
fastapi/: __init__.py  responses.py  testclient.py
multidict/: __init__.py
rcn_core/: data_access.py  globals.py  log.py  utils.py
rcn_core/mcp/: __init__.py  api.py
rcn_core/storage/: bases.py  target_storage.py
rcn_web/: .gitignore  AGENTS.md  __main__.py  config.py  main.py  rcn_exports.py  server_actions.py  types.py
rcn_web/automation/: __init__.py  burpsuite_vuln_checks.py  csp_bypass.py  scheduled_tasks.py  utils.py
rcn_web/cli/: main.py
rcn_web/core/: AGENTS.md  __init__.py  context_loader.py  events.py  js_utils.py  remote_flow_processor.py  scope.py  test_events.py  utils.py
rcn_web/flows/: __init__.py  collect_js.py  collect_urls.py  trufflehog_secrets.py
rcn_web/http/: utils.py
rcn_web/routes/: __init__.py  applications.py  domains.py  ips.py  mcp_api.py  server_actions.py  storage.py  (+2 more)
skills/: rcn-web.md
tests/: conftest.py
(+63 files in other folders)
