[project]
name = "rcn_web"
version = "0.1.0"
description = "Web Reconnaissance for RCN Server"
authors = [{name = "ntriisii" }]
dependencies = [
    "uvicorn",
    "aiohttp",
    "aiofiles",
    "fastapi",
    "mitmproxy>=10.4.0",
		"watchdog",
		"pentest_utils @ file:///home/ahmed/programming-projects/python/pentest-utils",
    "rcn_core @ file:///home/ahmed/programming-projects/python/rcn-core",
]

[tool.setuptools]
packages = ["rcn_web"]
