
[project]
name = "rcn_web"
version = "0.1.0"
description = "Web Reconnaissance for RCN Server"
authors = [{name = "ntriisii" }]
dependencies = [
    "uvicorn",
    "aiohttp",
    "aiofiles",
    "fastapi",
    "mitmproxy>=10.4.0",
		"watchdog",
    "validators",
		"pentest_utils @ file:///home/ahmed/programming-projects/python/pentest-utils",
    "rcn_core @ file:///home/ahmed/programming-projects/python/rcn-core",
    "click>=8.0",
]

[project.scripts]
rcn-web-interact = "rcn_web.cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0",
    "pytest-cov"
]

[tool.setuptools]
packages = ["rcn_web"]

[tool.uv.sources]
rcn-core = { path = "/home/ahmed/programming-projects/python/rcn-core/", editable = true }
